keycloak-gke-ingress/statefulset.yaml
# Source: keycloak/templates/statefulset.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: keycloak
  annotations:
    checksum/config: 777f022d7c68cb0e9d7807f72976544ac62e7e2eacb2017006570da507b30879
  labels:
    app: keycloak
    chart: keycloak-3.4.0
    release: "keycloak"
    heritage: "Tiller"
spec:
  replicas: 2
  serviceName: keycloak-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keycloak
        release: "keycloak"
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000

      containers:
        - name: keycloak
          image: "jboss/keycloak:4.2.1.Final"
          imagePullPolicy: IfNotPresent
          command:
            - /scripts/keycloak.sh
          volumeMounts:
            - name: scripts
              mountPath: /scripts
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /auth
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /auth
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 1
          resources:
            {}

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app:  keycloak
                  release: "keycloak"
                matchExpressions:
                  - key: role
                    operator: NotIn
                    values:
                      - test
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app:  keycloak
                    release: "keycloak"
                  matchExpressions:
                    - key: role
                      operator: NotIn
                      values:
                        - test
                topologyKey: failure-domain.beta.kubernetes.io/zone

      terminationGracePeriodSeconds: 60
      volumes:
        - name: scripts
          configMap:
            name: keycloak
            defaultMode: 0555
