keycloak-gke-ingress/http-service.yaml
# Source: keycloak/templates/http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-http
  labels:
    app: keycloak
    chart: keycloak-3.4.0
    release: "keycloak"
    heritage: "Tiller"
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: keycloak
    release: "keycloak"
