keycloak-gke-ingress/ingress.yaml
# Source: keycloak/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

  labels:
    app: keycloak
    chart: keycloak-3.4.0
    heritage: Tiller
    release: keycloak
spec:
  tls:
    - secretName: authcen-tls
  rules:
    - http:
        paths:
          - path: /auth
            backend:
              serviceName: keycloak-http
              servicePort: http
